@@ -349,10 +349,6 @@ variable "ArgoCD_OfficialWebRedirectEnabled" {
   type = bool
 }
 
-variable "ArgoCD_OfficialWebRedirectSrcFQDN" {
-  type = string
-}
-
 variable "ArgoCD_OfficialWebRedirectDestFQDN" {
   type = string
 }
